# scriptEditorUI

./: CMakeLists.txt  README.md  Resources.qrc  buttonbar.cpp  buttonbar.h  buttonbar.ui  commandlist.cpp  commandlist.h  commandlist.ui  editFile.cpp  editFile.h  editcommand.cpp  highlighter.cpp  highlighter.h  linenumber.cpp  linenumber.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  newcommand.cpp  newcommand.h  newcommand.ui  resource.qrc  scripteditor.cpp  scripteditor.h  scripteditorpanel.cpp  scripteditorpanel.h  searchAndReplace.cpp  searchAndReplace.ui  style.h
include/: buttonbar.h  config.h  editCommand.h  editFile.h  editTemplate.h  linenumber.h  newTemplate.h  newcommand.h  openTemplate.h  scripteditor.h  scripteditorpanel.h  searchAndReplace.h  style.h  tabScriptEditor.h
riggingCommands/: IKFK_arm.py  IKFK_leg.py  create_ctrl.py  example.py  jaw.py
riggingTemplates/: create_ctrl.py
src/: buttonbar.cpp  commandlist.cpp  editFile.cpp  editTemplate.cpp  editcommand.cpp  main.cpp  mainwindow.cpp  newTemplate.cpp  newcommand.cpp  openTemplate.cpp  scripteditor.cpp  scripteditorpanel.cpp  tabScriptEditor.cpp
syntaxLists/: maya_cmds_list.txt  rigging_commands_list.txt
ui/: buttonbar.ui  commandlist.ui  editCommand.ui  editTemplate.ui  linenumber.ui  mainwindow.ui  newTemplate.ui  openTemplate.ui  scripteditor.ui  scripteditorpanel.ui
